@@ -211,8 +211,7 @@ sonarqube {
       "**/config/SecurityConfiguration.java," +
       "src/main/java/uk/gov/hmcts/reform/hmc/config/MessageReaderFromQueueConfiguration.java," +
       "src/main/java/uk/gov/hmcts/reform/hmc/config/MessageSenderToTopicConfiguration.java," +
-      "src/main/java/uk/gov/hmcts/reform/hmc/config/MessageSenderToQueueConfiguration.java," +
-      "**/HmiHearingResponseMapper.java,**/InboundQueueServiceImpl.java,**/SyncResponse.java"
+      "src/main/java/uk/gov/hmcts/reform/hmc/config/MessageSenderToQueueConfiguration.java"
   }
 }
 
@@ -229,11 +228,11 @@ def versions = [
   springCloud     : '2020.0.1',
   springfoxSwagger: '3.0.0',
   testcontainers  : '1.15.2',
-  netty           : '4.1.75.Final',
+  netty           : '4.1.77.Final',
   serviceAuthVersion: '4.0.3'
 ]
 
-ext['spring-framework.version'] = '5.3.18'
+ext['spring-framework.version'] = '5.3.19'
 ext['log4j2.version'] = '2.17.1'
 ext['jackson.version'] = '2.13.2'
 
@@ -368,6 +367,7 @@ dependencies {
   testImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.1'
 
   compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+  compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
 
   compile group: 'org.flywaydb', name: 'flyway-core', version: '7.7.0'
   compileOnly group: 'org.mapstruct', name: 'mapstruct', version: versions.mapstruct
@@ -391,8 +391,8 @@ dependencies {
   annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final', 'org.projectlombok:lombok:1.18.16', 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
   testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final', 'org.projectlombok:lombok:1.18.16', 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
-  implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.0.2'
-  implementation group: 'com.azure', name: 'azure-core', version: '1.13.0'
+  implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.8.0'
+  implementation group: 'com.azure', name: 'azure-core', version: '1.28.0'
   // CVE-2021-42550
   implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.10'
   implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.10'
@@ -450,9 +450,11 @@ dependencies {
   functionalTestImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.1'
   functionalTestImplementation libraries.junit5
 
-  runtime group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
+  runtime group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
 
   cftlibImplementation group: 'org.springframework.boot', name: 'spring-boot-devtools'
+
+  testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 }
 
 mainClassName = 'uk.gov.hmcts.reform.hmc.Application'
@@ -523,4 +525,12 @@ bootWithCCD {
   environment("CFT_HEARING_SERVICE_DB_NAME", "hmc")
   environment("S2S_URL", "http://localhost:8489")
   environment("HMC_ACCESS_CONTROL_ENABLED", "false")
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+  // The line below prevents the build from failing if the Fortify scan detects issues
+  ignoreExitValue = true
 }
